--- a/react-project/src/index.css
+++ b/react-project/src/index.css
@@ -1,8 +1,9 @@
 body {
+  font-family: 'Pathway Extreme', sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +11,76 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  background-image: linear-gradient(to bottom right, #d9d1ff, #818df7);
+}
+
+.appContainer{
+  margin: auto;
+  /* padding: 10px; */
+  height: 97%;
+  width: 97%;
+  border-radius: 2rem;
+  background-image: linear-gradient(to bottom right, #e0dafd, #959ffe);
+  overflow: hidden;
+  grid-template-columns: 11em auto 20rem;
+}
+
+.mainPanel{
+  overflow-y: auto;
+}
+
+.titleBar{
+  font-size: 30pt;
+}
+
+.card{
+  color: white;
+  margin: 10px;
+  border-radius: 0.7rem;
+  background-color: #292a3b;
+}
+
+.compactCard{
+  /* display: flex; */
+  /* flex: 1; */
+  height: 7rem!important;
+  position: relative;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.compactCard:hover{
+  box-shadow: none;
+}
+
+.expandedCard{
+  /* display: flex; */
+  /* flex: 0; */
+  height: 7rem!important;
+  border-radius: 0.7rem;
+  position: relative;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.radialBar{
+  /* flex: 0; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+.detail{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
 }
