--- a/react-project/src/components/card/card.css
+++ b/react-project/src/components/card/card.css
@@ -1,7 +1,7 @@
 .card{
   flex: 1 0 calc(33.33% - 100px);
-  max-width: calc(100%-50px);
-  flex-basis: auto;
+  /* max-width: calc(100%-50px); */
+  /* flex-basis: auto; */
   color: white;
   margin: 10px;
   border-radius: 0.7rem;
@@ -15,16 +15,6 @@
   box-shadow: 10px 5px 5px rgb(105, 105, 105);
 }
 
-.compactCard{
-  width: 300px;
-  height: 270px;
-}
-
-.expandedCard{
-  /* width: 90vw; */
-  height: 270px;
-}
-
 .radialBar{
   padding: 7px;
   display: flex;
@@ -33,12 +23,13 @@
 }
 
 .detail{
-  height: calc(100% - 100px);
+  width: 100%;
+  height: 130px;
   display: flex;
   flex: 1;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-end;
+  overflow-y: auto;
 }
 
 .detail ul {
@@ -51,7 +42,5 @@
 }
 
 .cardButton{
-  position: absolute;
-  right: 15px;
-  bottom: 15px;
+  float: right;
 }
